added css and javascript

--- a/codelouisville/Home.html
+++ b/codelouisville/Home.html
@@ -17,6 +17,8 @@ href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700i
 rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/main.css">
+	<style>body {background-color: black}</style>
+	<script>alert("welcome!")</script>
 
   </head>
 
