--- a/codelouisville/cooking.html
+++ b/codelouisville/cooking.html
@@ -1,67 +1,86 @@
-<!DOCTYPE html>
-
-<html>
-
+<<!DOCTYPE html>
+<html lang="en">
   <head>
-
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Cooking</title>
 
-    <title>Chris Browder</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <link
-
-href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800'
-
-rel='stylesheet' type='text/css'>
-
-    <link rel="stylesheet" href="css/main.css">
-
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+          <li ><a href="index.html">Home</a></li>
+        <li class="active"><a href="cooking.html">Cooking</a></li>
+        <li><a href="gaming.html">Gaming</a></li> 
+      </ul>
+    </div>
+  </div>
+</nav>
+	<h1>Cooking Stuff</h1>
+	<p>Place Holder</p>
+	<h1>Gallery</h1>
+	<div class="row">
+  <div class="col-md-4">
+    <a href="pulpitrock.jpg" class="thumbnail">
+      <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p> 
+      <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
+    </a>
+  </div>
+  <div class="col-md-4">
+    <a href="moustiers-sainte-marie.jpg" class="thumbnail">
+      <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
+      <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
+    </a>
+  </div>
+  <div class="col-md-4">
+    <a href="cinqueterre.jpg" class="thumbnail">
+      <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p> 
+      <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
+    </a>
+  </div>
+</div>
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
 
-    <header>
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
 
-      <a href="index.html" id="logo">
-
-        <h1>Chris Browder</h1>
-
-        
-
-      </a>
-
-      <nav>
-
-        <ul>
-
-          <li><a href="index.html">Home</a></li>
-
-          <li><a href="gaming.html" >Gaming</a></li>
-
-          <li><a href="cooking.html" class="selected">Cooking</a></li>
-
-        </ul>
-
-      </nav>
-
-    </header>
-
-    <div id="wrapper">
-
-      <section>
-
-      </section>
-
-      <footer>
-
-      
-
-      </footer>
-
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
     </div>
 
+  </div>
+</div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
-
 </html>
