--- a/codelouisville/cooking.html
+++ b/codelouisville/cooking.html
@@ -8,20 +8,24 @@
     <title>Cooking</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="mystyle.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	 <script>$(document).ready(function)(){$(".row ").hide();
+	$(".row ").append("<button >Click Me</button>");
+	$("button").click(function() {
+	$(".row ").show();
+	$(this).remove();
+	});}</script>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Chris Browder</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
@@ -32,55 +36,102 @@
     </div>
   </div>
 </nav>
-	<h1>Cooking Stuff</h1>
-	<p>Place Holder</p>
-	<h1>Gallery</h1>
-	<div class="row">
-  <div class="col-md-4">
-    <a href="pulpitrock.jpg" class="thumbnail">
-      <p>Pulpit Rock: A famous tourist attraction in Forsand, Ryfylke, Norway.</p> 
-      <img src="pulpitrock.jpg" alt="Pulpit Rock" style="width:150px;height:150px">
-    </a>
-  </div>
-  <div class="col-md-4">
-    <a href="moustiers-sainte-marie.jpg" class="thumbnail">
-      <p>Moustiers-Sainte-Marie: Considered as one of the "most beautiful villages of France".</p>
-      <img src="moustiers-sainte-marie.jpg" alt="Moustiers Sainte Marie" style="width:150px;height:150px">
-    </a>
-  </div>
-  <div class="col-md-4">
-    <a href="cinqueterre.jpg" class="thumbnail">
-      <p>The Cinque Terre: A rugged portion of coast in the Liguria region of Italy.</p> 
-      <img src="cinqueterre.jpg" alt="Cinque Terre" style="width:150px;height:150px">
-    </a>
-  </div>
-</div>
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+	<!--recipes-->
+	<div class="container" id="recipe1" >
+		<div class="row">
+			<div class="col-sm-3">
+				<h3>Salmon Patties</h3>
+				<img src="salmonpattyandvegetables.jpg" class="img-thumbnail" alt="salmonpattyandvegetables" width="300px" height="200px">
+			</div>
+			<div class="col-sm-3">
+				<h3>Ingredients</h3>
+				<ul class="list-group">
+					<li class="list-group-item">1 can salmon</li>
+					<li class="list-group-item">1 cup bread crumbs</li>
+					<li class="list-group-item">1 egg</li>
+					<li class="list-group-item">1 can diced tomatoes drained</li>
+					<li class="list-group-item">salt and pepper</li>
+					<li class="list-group-item">1 tsp minced garlic</li>
+					<li class="list-group-item">vegetables and dressing of choice</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<h3>Instructions</h3>
+				<ul class="list-group">
+					<li class="list-group-item">Mix salmon, egg, and tomatos</li>
+					<li class="list-group-item">add breadcrumbs,garlic, salt and pepper</li>
+					<li class="list-group-item">mix well and then let sit for 15 min in fridge</li>
+					<li class="list-group-item">heat a skillet with butter</li>
+					<li class="list-group-item">make pattys and cover in breadcrumbs</li>
+					<li class="list-group-item">Cook in skillet till salmon is completely cooked.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="recipe2">
+		<div class="row">
+			<div class="col-sm-3">
+				<h3>Stuffed Eggplant</h3>
+				<img src="stuffedeggplant.jpg" class="img-thumbnail" alt="stuffedeggplant" width="300px" height="200px">
+			</div>
+			<div class="col-sm-3">
+				<h3>Ingredients</h3>
+				<ul class="list-group">
+					<li class="list-group-item">eggplant</li>
+					<li class="list-group-item">1/2lb ground turkey</li>
+					<li class="list-group-item">1 can crab meat</li>
+					<li class="list-group-item">1 cup shredded mozzarella</li>
+					<li class="list-group-item">1 tsp garlic</li>
+					<li class="list-group-item">salt and pepper</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<h3>Instructions</h3>
+				<ul class="list-group">
+					<li class="list-group-item">Core eggplant</li>
+					<li class="list-group-item">mix turkey, crabmeat, egg, and cheese together</li>
+					<li class="list-group-item">add seasonings.</li>
+					<li class="list-group-item">preheat oven to 350.  Fill eggplants with stuffing</li>
+					<li class="list-group-item">Place in oven for 20 minutes</li>
+					<li class="list-group-item">Remove from oven and put mozzarella on top of eggplant</li>
+					<li class="list-group-item">Put back in oven for another 15 minutes.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="container" id="recipe3">
+		<div class="row">
+			<div class="col-sm-3">
+				<h3>Turkey Artichoke Pasta</h3>
+				<img src="turkeyartichokepasta.jpg" class="img-thumbnail" alt="turkeyartichokepasta" width="300px" height="200px">
+			</div>
+			<div class="col-sm-3">
+				<h3>Ingredients</h3>
+				<ul class="list-group">
+					<li class="list-group-item">sliced turkey</li>
+					<li class="list-group-item">1 artichoke</li>
+					<li class="list-group-item">1 brick cream cheese</li>
+					<li class="list-group-item">pasta noodles</li>
+					<li class="list-group-item">salt and pepper and garlic</li>
+					<li class="list-group-item">1/2cup olive oil</li>
+				</ul>
+			</div>
+			<div class="col-sm-6">
+				<h3>Instructions</h3>
+				<ul class="list-group">
+					<li class="list-group-item">mix artichoke hearts with creamcheese and seasonings</li>
+					<li class="list-group-item">roll out turkey slices and place spoonful of stuffing inside</li>
+					<li class="list-group-item">roll up the turkey and cook in a skillet till brown</li>
+					<li class="list-group-item">boil pasta till al dente'</li>
+					<li class="list-group-item">when pasta is finished put olive oil over pasta</li>
+					<li class="list-group-item">place stuffed turkey on top of pasta</li>
+					<li class="list-group-item">Enjoy!</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+   
+    
   </body>
 </html>
