--- a/codelouisville/cooking.html
+++ b/codelouisville/cooking.html
@@ -31,8 +31,10 @@
     </div>
   </div>
 </nav>
+
 	<!--recipes-->
 	<div class="container" id="recipe1" >
+	<h1>Recipes</h1>
 		<div class="row">
 			<div class="col-sm-3">
 				<h3>Salmon Patties</h3>
@@ -42,24 +44,24 @@
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
 				<ul class="list-group">
-					<li class="list-group-item">1 can salmon</li>
-					<li class="list-group-item">1 cup bread crumbs</li>
-					<li class="list-group-item">1 egg</li>
-					<li class="list-group-item">1 can diced tomatoes drained</li>
-					<li class="list-group-item">salt and pepper</li>
-					<li class="list-group-item">1 tsp minced garlic</li>
-					<li class="list-group-item">vegetables and dressing of choice</li>
+					<li class="list-group-item"><h4>1 can salmon</h4></li>
+					<li class="list-group-item"><h4>1 cup bread crumbs</h4></li>
+					<li class="list-group-item"><h4>1 egg</h4></li>
+					<li class="list-group-item"><h4>1 can diced tomatoes drained</h4></li>
+					<li class="list-group-item"><h4>salt and pepper</h4></li>
+					<li class="list-group-item"><h4>1 tsp minced garlic</h4></li>
+					<li class="list-group-item"><h4>vegetables and dressing of choice</h4></li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<h3>Instructions</h3>
 				<ul class="list-group">
-					<li class="list-group-item">Mix salmon, egg, and tomatos</li>
-					<li class="list-group-item">add breadcrumbs,garlic, salt and pepper</li>
-					<li class="list-group-item">mix well and then let sit for 15 min in fridge</li>
-					<li class="list-group-item">heat a skillet with butter</li>
-					<li class="list-group-item">make pattys and cover in breadcrumbs</li>
-					<li class="list-group-item">Cook in skillet till salmon is completely cooked.</li>
+					<li class="list-group-item"><h4>Mix salmon, egg, and tomatos</h4></li>
+					<li class="list-group-item"><h4>add breadcrumbs,garlic, salt and pepper</h4></li>
+					<li class="list-group-item"><h4>mix well and then let sit for 15 min in fridge</h4></li>
+					<li class="list-group-item"><h4>heat a skillet with butter</h4></li>
+					<li class="list-group-item"><h4>make pattys and cover in breadcrumbs</h4></li>
+					<li class="list-group-item"><h4>Cook in skillet till salmon is completely cooked.</h4></li>
 				</ul>
 			</div>
 		</div>
@@ -73,24 +75,24 @@
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
 				<ul class="list-group">
-					<li class="list-group-item">eggplant</li>
-					<li class="list-group-item">1/2lb ground turkey</li>
-					<li class="list-group-item">1 can crab meat</li>
-					<li class="list-group-item">1 cup shredded mozzarella</li>
-					<li class="list-group-item">1 tsp garlic</li>
-					<li class="list-group-item">salt and pepper</li>
+					<li class="list-group-item"><h4>eggplant</h4></li>
+					<li class="list-group-item"><h4>1/2lb ground turkey</h4></li>
+					<li class="list-group-item"><h4>1 can crab meat</h4></li>
+					<li class="list-group-item"><h4>1 cup shredded mozzarella</h4></li>
+					<li class="list-group-item"><h4>1 tsp garlic</h4></li>
+					<li class="list-group-item"><h4>salt and pepper</h4></li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<h3>Instructions</h3>
 				<ul class="list-group">
-					<li class="list-group-item">Core eggplant</li>
-					<li class="list-group-item">mix turkey, crabmeat, egg, and cheese together</li>
-					<li class="list-group-item">add seasonings.</li>
-					<li class="list-group-item">preheat oven to 350.  Fill eggplants with stuffing</li>
-					<li class="list-group-item">Place in oven for 20 minutes</li>
-					<li class="list-group-item">Remove from oven and put mozzarella on top of eggplant</li>
-					<li class="list-group-item">Put back in oven for another 15 minutes.</li>
+					<li class="list-group-item"><h4>Core eggplant</h4></li>
+					<li class="list-group-item"><h4>mix turkey, crabmeat, egg, and cheese together</h4></li>
+					<li class="list-group-item"><h4>add seasonings.</h4></li>
+					<li class="list-group-item"><h4>preheat oven to 350.  Fill eggplants with stuffing</h4></li>
+					<li class="list-group-item"><h4>Place in oven for 20 minutes</h4></li>
+					<li class="list-group-item"><h4>Remove from oven and put mozzarella on top of eggplant</h4></li>
+					<li class="list-group-item"><h4>Put back in oven for another 15 minutes.</h4></li>
 				</ul>
 			</div>
 		</div>
@@ -104,24 +106,24 @@
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
 				<ul class="list-group">
-					<li class="list-group-item">sliced turkey</li>
-					<li class="list-group-item">1 artichoke</li>
-					<li class="list-group-item">1 brick cream cheese</li>
-					<li class="list-group-item">pasta noodles</li>
-					<li class="list-group-item">salt and pepper and garlic</li>
-					<li class="list-group-item">1/2cup olive oil</li>
+					<li class="list-group-item"><h4>sliced turkey</h4></li>
+					<li class="list-group-item"><h4>1 artichoke</h4></li>
+					<li class="list-group-item"><h4>1 brick cream cheese</h4></li>
+					<li class="list-group-item"><h4>pasta noodles</h4></li>
+					<li class="list-group-item"><h4>salt and pepper and garlic</h4></li>
+					<li class="list-group-item"><h4>1/2cup olive oil</h4></li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<h3>Instructions</h3>
 				<ul class="list-group">
-					<li class="list-group-item">mix artichoke hearts with creamcheese and seasonings</li>
-					<li class="list-group-item">roll out turkey slices and place spoonful of stuffing inside</li>
-					<li class="list-group-item">roll up the turkey and cook in a skillet till brown</li>
-					<li class="list-group-item">boil pasta till al dente'</li>
-					<li class="list-group-item">when pasta is finished put olive oil over pasta</li>
-					<li class="list-group-item">place stuffed turkey on top of pasta</li>
-					<li class="list-group-item">Enjoy!</li>
+					<li class="list-group-item"><h4>mix artichoke hearts with creamcheese and seasonings</h4></li>
+					<li class="list-group-item"><h4>roll out turkey slices and place spoonful of stuffing inside</h4></li>
+					<li class="list-group-item"><h4>roll up the turkey and cook in a skillet till brown</h4></li>
+					<li class="list-group-item"><h4>boil pasta till al dente'</h4></li>
+					<li class="list-group-item"><h4>when pasta is finished put olive oil over pasta</h4></li>
+					<li class="list-group-item"><h4>place stuffed turkey on top of pasta</h4></li>
+					<li class="list-group-item"><h4>Enjoy!</h4></li>
 				</ul>
 			</div>
 		</div>
