--- a/codelouisville/index.html
+++ b/codelouisville/index.html
@@ -33,7 +33,7 @@
 <div class="container" >
 	<div class="jumbotron">
 	<h1>About Me</h1>
-	<p>Hi, I am Chris Browder, and this website is a project for Code Louisville. Since I love cooking and playing video games, I decided to display them in my website. </p>
+	<h3>Hi, I am Chris Browder, and this website is a project for Code Louisville. Since I love cooking and playing video games, I decided to display them in my website. </h3>
 	
 	<p>Email:  <a href="mailto: viceroykaleb@gmail.com"><span class="glyphicon glyphicon-envelope"></span></a></p>
 	</div>
