--- a/codelouisville/gaming.html
+++ b/codelouisville/gaming.html
@@ -32,14 +32,14 @@
 </nav>
 
 <div class="container">
-	<h1>Videos</h1>
+	<h1>My Youtube Videos</h1>
 	<div class="row">
 		<div class="col-sm-6">	
 			<div class="embed-responsive embed-responsive-16by9">
 				
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ToJmvUF0_9c" frameborder="0" allowfullscreen></iframe>
 			</div>
-			<p>In this video I am fighting the Iron King in Dark Souls II</p>
+			<h4>In this video I am fighting the Iron King in Dark Souls II</h4>
 		</div>
 		<div class="col-sm-6">	
 			<div class="embed-responsive embed-responsive-16by9">
@@ -47,7 +47,7 @@
 				
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CKWhM8049u0" frameborder="0" allowfullscreen></iframe>
 			</div>
-			<p>USF 4 ranked matches</p>
+			<h4>USF 4 ranked matches</h4>
 		</div>
 		
 		
