--- a/codelouisville/cooking.html
+++ b/codelouisville/cooking.html
@@ -33,13 +33,13 @@
 </nav>
 
 	<!--recipes-->
-	<div class="container" id="recipe1" >
-	<h1>Recipes</h1>
-		<div class="row">
+	<div class="container"  >
+	<button class="btn-info">Click for Recipes</button><br>
+	<h2>I began cooking in my youth by helping my grandmother in the kitchen. After highschool, I attended Sullivan for culinary arts for 1 year. Since then I have continued cooking in various restaurants and on my own. Click the button above for a few recipes.</h2>
+		<div class="row" id="recipe1">
 			<div class="col-sm-3">
 				<h3>Salmon Patties</h3>
-				
-				<img src="salmonpattyandvegetables.jpg" class="img-thumbnail" alt="salmonpattyandvegetables" width="300px" height="200px">
+				<a href="salmonpattyandvegetables.jpg"><img src="salmonpattyandvegetables.jpg" class="img-thumbnail" alt="salmon patty and vegetables" width="300px" height="200px"></a>
 			</div>
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
@@ -64,13 +64,11 @@
 					<li class="list-group-item"><h4>Cook in skillet till salmon is completely cooked.</h4></li>
 				</ul>
 			</div>
-		</div>
-	</div>
-	<div class="container" id="recipe2">
-		<div class="row">
+		</div><br>
+		<div class="row" id="recipe2">
 			<div class="col-sm-3">
 				<h3>Stuffed Eggplant</h3>
-				<img src="stuffedeggplant.jpg" class="img-thumbnail" alt="stuffedeggplant" width="300px" height="200px">
+				<a href="stuffedeggplant.jpg"><img src="stuffedeggplant.jpg" class="img-thumbnail" alt="stuffed eggplant" width="300px" height="200px"></a>
 			</div>
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
@@ -95,13 +93,11 @@
 					<li class="list-group-item"><h4>Put back in oven for another 15 minutes.</h4></li>
 				</ul>
 			</div>
-		</div>
-	</div>
-	<div class="container" id="recipe3">
-		<div class="row">
+		</div><br>
+		<div class="row" id="recipe3">
 			<div class="col-sm-3">
 				<h3>Turkey Artichoke Pasta</h3>
-				<img src="turkeyartichokepasta.jpg" class="img-thumbnail" alt="turkeyartichokepasta" width="300px" height="200px">
+				<a href="turkeyartichokepasta.jpg"><img src="turkeyartichokepasta.jpg" class="img-thumbnail" alt="turkey artichoke pasta" width="300px" height="200px"></a>
 			</div>
 			<div class="col-sm-3">
 				<h3>Ingredients</h3>
@@ -129,7 +125,7 @@
 		</div>
 	</div>
 	
-   
+   <script src="recipe.js"></script>
     
   </body>
 </html>
