--- a/codelouisville/index.html
+++ b/codelouisville/index.html
@@ -33,9 +33,12 @@
 <div class="container" >
 	<div class="jumbotron">
 	<h1>About Me</h1>
-	<h3>Hi, I am Chris Browder, and this website is a project for Code Louisville. Since I love cooking and playing video games, I decided to display them in my website. </h3>
+	<h3>Hi, I am Chris Browder, and this website is a project for Code Louisville. Since I love cooking and playing video games, I decided to display them in my website. I am interested in eventually learning how to make games as well. </h3>
 	
-	<p>Email:  <a href="mailto: viceroykaleb@gmail.com"><span class="glyphicon glyphicon-envelope"></span></a></p>
+	<p><a href="mailto: viceroykaleb@gmail.com"><span class="glyphicon glyphicon-envelope"></span></a></p>
+	<h4><a href="https://twitter.com/6c9ab76434e3444">Twitter</a></h4>
+	<h4><a href="https://www.youtube.com/channel/UCYRfAV4NUMyGTTnPBEWxXBg">Youtube</a></h4>
+	<h4><a href="https://teamtreehouse.com/chrisb4">Treehouse</a></h4>
 	</div>
 </div>
     <script src="welcome.js"></script>
